--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,6 +79,7 @@ flutter:
   - assets/push_profile.svg
   - assets/change-foto-profile.svg
   - assets/photo-profile.svg
+  - assets/logo.svg
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
