--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   image_picker: ^0.8.5
   syncfusion_flutter_datepicker: ^20.1.50
   font_awesome_flutter: ^10.1.0
+  shared_preferences: ^2.0.13
+  dio: ^4.0.6
 
 dev_dependencies:
   flutter_test:
